--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.0",
     "expo": "~44.0.0",
+    "expo-camera": "~12.1.2",
+    "expo-location": "~14.0.1",
+    "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
